# esphome-poc-component-lib

./: README.rst  setup.cfg  setup.py
esphome_extras/: __init__.py
esphome_extras/components/tmp102x/: sensor.py  tmp102.cpp
samples/: .gitignore  temp_sensor.yaml
