[metadata]
name = ESPHome-Extras
author = Tim Savage
author-email = tim@savage.company
description = Extra components for ESPHome
platforms = any
license = MIT
keywords =
    home
    automation
    esphome
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: C++
    Programming Language :: Python :: 3
    Topic :: Home Automation

[files]
package_data =
    esphome_extras.components = *

[options]
python_requires = >=3.6,<4.0
packages = esphome_extras
setup_requires =
    setuptools >=38.3
install_requires =
    esphome

[options.entry_points]
esphome.components =
    Extra Components = esphome_extras.components

[bdist_wheel]
universal = False
